--- a/WPFEngineTests/MainWindow.xaml
+++ b/WPFEngineTests/MainWindow.xaml
@@ -10,55 +10,57 @@
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
-            <RowDefinition Height="50"/>
+            <RowDefinition Height="80"/>
         </Grid.RowDefinitions>
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
-                <TextBlock x:Name="AmbientLabel" Text="Ambient temperature"/>
-                <TextBox x:Name="tboxAmbientTemperature" Height="30" Text="{Binding TestStand.AmbientTemperature}"/>
-                <TextBlock Text="Engine"/>
-                <ComboBox ItemsSource="{Binding Engines}" 
-                          SelectionChanged="cbEngineType_SelectionChanged"
-                          FontSize="18">
-                    <ComboBox.ItemTemplate>
-                        <DataTemplate>
-                            <TextBlock Text="{Binding Name}"/>
-                        </DataTemplate>
-                    </ComboBox.ItemTemplate>
-                </ComboBox>
-            <TextBlock Text="Test"/>
-            <ComboBox x:Name="cbAvailableTests"
-                ItemsSource="{Binding AvailableTests}" 
-                      FontSize="18">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center">
+            <TextBlock x:Name="AmbientLabel" Text="Ambient temperature"/>
+            <TextBox x:Name="tboxAmbientTemperature" Height="30" Text="{Binding TestStand.AmbientTemperature}"/>
+            <TextBlock Text="Engine"/>
+            <ComboBox ItemsSource="{Binding Engines}" 
+                      SelectionChanged="cbEngineType_SelectionChanged"
+                      FontSize="16">
                 <ComboBox.ItemTemplate>
                     <DataTemplate>
                         <TextBlock Text="{Binding Name}"/>
                     </DataTemplate>
                 </ComboBox.ItemTemplate>
             </ComboBox>
-            <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10, 0, 0">
-                    <TextBlock Text="Log information" FontSize="10" ToolTip="{Binding LogsLocation}"/>
-                    <Separator Width="10" Background="Transparent"/>
-                    <CheckBox VerticalAlignment="Center" Checked="CheckBox_Checked" />
-                </StackPanel>
+        <TextBlock Text="Test"/>
+        <ComboBox x:Name="cbAvailableTests"
+                  ItemsSource="{Binding AvailableTests}" 
+                  FontSize="16">
+            <ComboBox.ItemTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding Name}"/>
+                </DataTemplate>
+            </ComboBox.ItemTemplate>
+        </ComboBox>
+        <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0, 10, 0, 0">
+                <TextBlock Text="Log information" FontSize="10" ToolTip="{Binding LogsLocation}"/>
+                <Separator Width="10" Background="Transparent"/>
+                <CheckBox VerticalAlignment="Center" IsChecked="True" Checked="CheckBox_Checked" Unchecked="CheckBox_Unchecked" />
             </StackPanel>
-            <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
-                <Label Content="Results"/>
-                <Border BorderThickness="0.2" BorderBrush="Black" CornerRadius="14">
-                    <TextBlock x:Name="tBlockResults" Width="250" Height="200"/>
-                </Border>
+        </StackPanel>
+        <StackPanel Grid.Column="1" HorizontalAlignment="Center" VerticalAlignment="Center">
+            <Label Content="Results"/>
+            <Border BorderThickness="0.2" BorderBrush="Black" CornerRadius="14" Padding="5">
+                <TextBlock x:Name="tBlockResults" Width="250" Height="200" FontSize="16" TextWrapping="Wrap"/>
+            </Border>
         </StackPanel>
         <Border Grid.Row="1" 
                 CornerRadius="10" 
                 BorderBrush="Black" 
                 BorderThickness="0.5" 
                 Width="100" 
+                Height="50"
                 Background="#FF99FF99"
                 Grid.ColumnSpan="2">
-            <Button Background="Transparent" Content="Run" BorderBrush="{x:Null}" Click="Button_Click"/>
+            <Button Background="Transparent" Content="Run" BorderBrush="{x:Null}" Click="Button_Click">
+            </Button>
         </Border>
     </Grid>
 </Window>
